--- a/EduHomeUI/EduHomeUI.csproj
+++ b/EduHomeUI/EduHomeUI.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Areas\EHMasterPanel\Data\**" />
+    <Content Remove="Areas\EHMasterPanel\Data\**" />
+    <EmbeddedResource Remove="Areas\EHMasterPanel\Data\**" />
+    <None Remove="Areas\EHMasterPanel\Data\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.18">
       <PrivateAssets>all</PrivateAssets>
@@ -20,7 +27,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Areas\EHMasterPanel\Data\" />
     <Folder Include="ViewModels\" />
   </ItemGroup>
 
