--- a/EduHome.Core/EduHome.Core.csproj
+++ b/EduHome.Core/EduHome.Core.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.18" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EmailService\EduHome.EmailServices.csproj" />
+  </ItemGroup>
+
 </Project>
