googleReCaptcha site key secret key added

--- a/EduHomeUI/appsettings.json
+++ b/EduHomeUI/appsettings.json
@@ -15,5 +15,7 @@
     "Username": "eduhome521@gmail.com",
     "Password": "dipkwyowvqwqetyu"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "googleReCaptcha:SiteKey": "6LdeARInAAAAANzb-2yC-rVXhbNl9zD80HeOVtaT",
+  "googleReCaptcha:SecretKey": "6LdeARInAAAAADMKFec9yrDVPXhI95WDk3DTZjk4"
 }
