Recaptcha added to register page

--- a/EduHomeUI/appsettings.json
+++ b/EduHomeUI/appsettings.json
@@ -16,6 +16,8 @@
     "Password": "dipkwyowvqwqetyu"
   },
   "AllowedHosts": "*",
-  "googleReCaptcha:SiteKey": "6LdeARInAAAAANzb-2yC-rVXhbNl9zD80HeOVtaT",
-  "googleReCaptcha:SecretKey": "6LdeARInAAAAADMKFec9yrDVPXhI95WDk3DTZjk4"
+  "GooglereCAPTCHA": {
+    "ReCAPTCHA_Site_Key": "6LcMDhInAAAAAIdFEK3RJvClyJsfmsSmyYtv0vK6",
+    "ReCAPTCHA_Secret_Key": "6LcMDhInAAAAAFI1hM8wxlYXxfD_n_nB2bPtzqAQ"
+  }
 }
