--- a/EduHomeUI/EduHomeUI.csproj
+++ b/EduHomeUI/EduHomeUI.csproj
@@ -33,4 +33,8 @@
     <ProjectReference Include="..\EmailService\EduHome.EmailServices.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\DataTable\" />
+  </ItemGroup>
+
 </Project>
