--- a/EduHomeUI/EduHomeUI.csproj
+++ b/EduHomeUI/EduHomeUI.csproj
@@ -29,6 +29,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.14" />
+    <PackageReference Include="RazorLight" Version="2.3.1" />
+    <PackageReference Include="RazorLight.NetCore3" Version="3.0.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -37,6 +39,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Views\EmailTemplates\" />
     <Folder Include="wwwroot\DataTable\" />
   </ItemGroup>
 
