--- a/EduHomeUI/EduHomeUI.csproj
+++ b/EduHomeUI/EduHomeUI.csproj
@@ -32,6 +32,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.14" />
     <PackageReference Include="RazorLight" Version="2.3.1" />
     <PackageReference Include="RazorLight.NetCore3" Version="3.0.2" />
+    <PackageReference Include="Stripe.net" Version="41.24.0" />
   </ItemGroup>
 
   <ItemGroup>
